plugins {
    id 'fabric-loom' version '1.6-SNAPSHOT'
    id 'maven-publish'
}

version project.mod_version + "+mc.$minecraft_version"
group project.maven_group
base.archivesName = project.archives_base_name

repositories {
    maven {
        name 'JitPack'
        url 'https://jitpack.io'
    }
    maven { url "https://maven.isxander.dev/releases" }
    maven { url "https://maven.terraformersmc.com" }
//    mavenLocal()
}

loom {
    splitEnvironmentSourceSets()
    accessWidenerPath.set file("src/main/resources/jsonpatcher.accesswidener")

    runs {
        testmodClient {
            client()
            name "Testmod Client"
            source sourceSets.test
            runDir "run/test"
        }
        testmodServer {
            server()
            name "Testmod Server"
            source sourceSets.test
            runDir "run/test_server"
        }
        server {
            runDir "run/server"
        }
    }

    mods.register("jsonpatcher_testmod") {
        sourceSet sourceSets.test
    }
    mods.register("jsonpatcher") {
        sourceSet sourceSets.main
        sourceSet sourceSets.client
    }

    runs.each {
        it.vmArg("-Djsonpatcher.log.level=debug")
    }
}

sourceSets.test {
    runtimeClasspath += sourceSets.main.runtimeClasspath
    runtimeClasspath += sourceSets.client.runtimeClasspath
    compileClasspath += sourceSets.main.compileClasspath
    compileClasspath += sourceSets.client.compileClasspath
}

dependencies {
    minecraft "com.mojang:minecraft:$minecraft_version"
    mappings "net.fabricmc:yarn:$yarn_mappings:v2"
    modImplementation "net.fabricmc:fabric-loader:$loader_version"

    modImplementation "net.fabricmc.fabric-api:fabric-api:$fabric_version"

//    include(implementation("io.github.mattidragon.jsonpatch:JsonPatcher-Lang:$lang_version"))
    include(implementation("com.github.mattidragon:JsonPatcherLang:$lang_version"))

    // Config
    modImplementation include("com.github.mattidragon:ConfigToolkit:$configtoolkit_version")
    annotationProcessor clientAnnotationProcessor("com.github.mattidragon:ConfigToolkit:$configtoolkit_version")
    modCompileOnly(modLocalRuntime("com.terraformersmc:modmenu:$modmenu_version"))

    // Make testmod depend on the client source set. Main is handled by gradle automatically.
    testImplementation sourceSets.client.output
}

tasks.withType(ProcessResources).configureEach {
    inputs.property "version", project.version
    filteringCharset "UTF-8"

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release.set 21
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

java {
    withSourcesJar()
}

jar {
    from("LICENSE") {
        rename { "${it}_$archives_base_name"}
    }
}

publishing {
    publications.create("mavenJava", MavenPublication) {
        from components.java
    }
    repositories {}
}
